# pants-cloud-function-reproducable-bug

./: .gitignore  BUILD  README.md  deploy.sh  deploy_func.sh  pants.toml  platforms.json  pyproject.toml
.pants.d/workdir/run-tracker/pants_run_2024_04_05_21_52_08_417_fb89890f92d24910975fc6c9579817db/: logs
.pants.d/workdir/run-tracker/pants_run_2024_04_05_21_52_37_969_d91bbee08a284d088d9f9c94a713feea/: logs
.pants.d/workdir/run-tracker/pants_run_2024_04_05_21_55_25_80_e8e2dec346494560b246701217d54c59/: logs
.pants.d/workdir/run-tracker/pants_run_2024_04_05_21_56_09_788_df92bae484334e798123b867c758fa39/: logs
.pants.d/workdir/run-tracker/pants_run_2024_04_05_21_57_04_153_bf8e10c465154daa98e64445c0f28961/: logs
.pants.d/workdir/run-tracker/pants_run_2024_04_05_21_57_22_857_33d19f734bb34f4c8507090b3932b2a6/: logs
.pants.d/workdir/run-tracker/pants_run_2024_04_05_21_57_29_675_2255046b372e4bebb0c00b7cb84d23c9/: logs
.pants.d/workdir/run-tracker/pants_run_2024_04_05_21_58_43_426_cfdc29d96e584c8aba71ec2276a7d783/: logs
.pants.d/workdir/run-tracker/pants_run_2024_04_05_21_59_41_868_1ae819c4bb894db5a1b47ea8da119d2f/: logs
.pants.d/workdir/run-tracker/pants_run_2024_04_05_22_00_07_833_ae3cc926413943dc8940d4a03485c355/: logs
.pants.d/workdir/run-tracker/pants_run_2024_04_05_22_00_42_316_cc29afa9b6b34e1b944b71e211387ef1/: logs
functions/: BUILD  main.py
migrations/versions/: 8e32eafd0369_initial_migration.py
models/: user.py
services/: BUILD  app.py  views.py
(+316 files in other folders)
